# MultiThreadFileCopier

./: CMakeLists.txt  README.md  consumerFileCopier.cpp  consumerFileCopier.h  main.cpp  producersFileCopier.cpp  producersFileCopier.h
DirToTest1/TestDirectory0/: 3.txt
ForCopy/DirToTest1/TestDirectory0/: 2.txt
ForCopy/DirToTest1/TestDirectory0/TestDirectory1/: 11.txt
